--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,5 @@
-<%- include('layout', { body: \`
+<%
+const pageContent = `
     <section class="contact-hero" style="min-height: 80vh; display: flex; align-items: center;">
         <div class="container">
             <div class="contact-hero-content" style="text-align: center;">
@@ -109,4 +110,7 @@
             animate();
         });
     </script>
-\` }) %>
+`;
+%>
+
+<%- include('layout', { body: pageContent }) %>
