--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,4 +1,5 @@
-<%- include('layout', { body: \`
+<%
+const pageContent = `
     <section class="contact-hero">
         <div class="container">
             <div class="contact-hero-content">
@@ -315,4 +316,7 @@
             </div>
         </div>
     </section>
-\` }) %>
+`;
+%>
+
+<%- include('layout', { body: pageContent }) %>
